--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,15 @@ requires = ["setuptools>=70.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ptn-cli"
-version = "1.0.5"
-description = "Proprietary Trading Network CLI"
+name = "vanta-cli"
+version = "2.0.0"
+description = "Vanta Network CLI"
 readme = "README.md"
 authors = [
     {name = "taoshi.io" }
 ]
 license = { file = "LICENSE" }
-scripts = { ptncli = "ptn_cli.ptncli:main" }
+scripts = { vanta = "vanta_cli.vanta:main" }
 requires-python = ">=3.9,<3.14"
 dependencies = [
     "wheel",
@@ -46,8 +46,8 @@ dev = [
 
 [project.urls]
 # more details can be found here
-homepage = "https://github.com/taoshidev/ptncli"
-Repository = "https://github.com/taoshidev/ptncli"
+homepage = "https://github.com/taoshidev/vanta-cli"
+Repository = "https://github.com/taoshidev/vanta-cli"
 
 [tool.flit.metadata]
 classifiers = [
@@ -66,5 +66,5 @@ classifiers = [
 ]
 
 [tool.setuptools]
-package-dir = { "ptn_cli" = "ptn_cli" }
+package-dir = { "vanta_cli" = "vanta_cli" }
 include-package-data = true
