--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "vanta-cli"
-version = "2.0.0"
+version = "2.0.1"
 description = "Vanta Network CLI"
 readme = "README.md"
 authors = [
     {name = "taoshi.io" }
 ]
-license = { file = "LICENSE" }
+license = "MIT"
 scripts = { vanta = "vanta_cli.vanta:main" }
 requires-python = ">=3.9,<3.14"
 classifiers = [
